--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,6 +10,7 @@
   <div class="parent-welcome-version" color="dark">
     <p class="txt-welcome" color="dark">BIENVENIDO</p>
     <p class="txt-version" id="version"></p>
+    <p class="txt-version">{{username}}</p>
   </div>
   <ion-button id="qr" (click)="qrButton()">
     <img src="/assets/qr-code.jpg " class="img-qr">
